fixed section padding for work section on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -757,10 +757,12 @@ input[type="submit"].btns:active {
 .work-grid {
   padding-left: 40px;
   padding-right: 40px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 @media (min-width: 785px) {
-  /* line 10, ../sass/layout/_work.scss */
+  /* line 12, ../sass/layout/_work.scss */
   .work {
     /*padding:0;*/
   }
