--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -5,6 +5,8 @@
 .work-grid{
 	padding-left: 40px;
 	padding-right: 40px;
+	padding-top:100px;
+	padding-bottom:100px;
 }
 @media (min-width: 785px){ 
 .work{
